[package]
name = "idd_sample_app"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console = "0.15.7"

[dependencies.windows]
version = "0.48.0"
features = [
    "Win32_System_Threading",
    "Win32_Devices_Enumeration_Pnp",
    "Win32_Devices_Properties",
    "Win32_Foundation",
    "Win32_Security"
]

[build-dependencies]
winres = "0.1"
